framec_tests/language_specific/c/v3_mir/positive/forward_inline_line_comment.frm
@target c

system S {
    machine:
        $A => $P {
            e() {
                => $^ // inline ok
            }
        }
        $P { }
}
