framec_tests/language_specific/c/v3_mir/negative/forward_without_parent_mixed.frm
@target c

system S {
    machine:
        $P {
        }
        $A => $P {
            e() {
                // ok: $A declares a parent; not tested here
            }
        }
        $B {
            e() {
                => $^
            }
        }
}

